# Aircraft_engine_remaining_life_prediction

./: README.md  main.py  pyproject.toml
Data/: normalization_params.json  processed_test_reduced.csv  test_FD001.csv  train_FD001.csv
augment_caption/: 数据预处理报告.md  模型架构优化实验总结报告.md  模型训练总结报告.md  项目完整说明文档.md  项目架构概览.md
augment_test/: data_analysis.py  read_docx.py
documentation/: 航空发动机剩余寿命预测2025.docx
models/: LSTM_full_no_early_stopping_best.pth  LSTM_full_with_early_stopping_best.pth  LSTM_reduced_no_early_stopping_best.pth  LSTM_reduced_with_early_stopping_best.pth  Transformer_full_no_early_stopping_best.pth  Transformer_full_with_early_stopping_best.pth  Transformer_reduced_no_early_stopping_best.pth  Transformer_reduced_with_early_stopping_best.pth
models_2/: LSTM_small_full_no_early_stopping_seq30_best.pth  LSTM_small_full_no_early_stopping_seq30_epoch2000.pth  LSTM_small_full_no_early_stopping_seq50_best.pth  LSTM_small_full_no_early_stopping_seq50_epoch2000.pth  LSTM_small_full_with_early_stopping_seq30_best.pth  LSTM_small_full_with_early_stopping_seq50_best.pth  LSTM_small_reduced_no_early_stopping_seq30_best.pth  LSTM_small_reduced_no_early_stopping_seq30_epoch2000.pth  LSTM_small_reduced_no_early_stopping_seq50_best.pth  LSTM_small_reduced_no_early_stopping_seq50_epoch2000.pth  LSTM_small_reduced_with_early_stopping_seq30_best.pth  LSTM_small_reduced_with_early_stopping_seq50_best.pth  Transformer_small_full_no_early_stopping_seq30_best.pth  Transformer_small_full_no_early_stopping_seq30_epoch2000.pth  (+10 more)
src/: data_loader.py  data_preprocessing.py  (+13 more)
(+107 files in other folders)
